--- a/Group6.html
+++ b/Group6.html
@@ -53,7 +53,7 @@
             <h1>Energy Use</h1>
         </div>
         <div class="section">
-            <div class="grid-container">
+            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 10px;">
                 <div class="grid-item">
                     <text style="font: 'Lato';font-size: 14px;font-weight: bold;">
                         Cost of getting electricity (cumulative measure of total procedural, temporal, generation and
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="grid-container">
+            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 10px;">
                 <div class="grid-item">
                     <text style="font: 'Lato';font-size: 14px;font-weight: bold;">
                         Inflation, consumer prices (annual %)
@@ -181,71 +181,6 @@
             lazyLoad: true
         });
     </script>
-
-    <style>
-        html,
-        body {
-            background-color: #FDFEFE;
-            margin: 0;
-            padding: 0;
-        }
-
-        .grid-container {
-            display: grid;
-            grid-template-columns: auto auto;
-            padding: 10px;
-        }
-
-
-        .grid-item {
-            text-align: center;
-        }
-
-        h1 {
-            color: #34495E;
-            text-align: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-        }
-
-        h2,
-        h3,
-        h4,
-        h5 {
-            color: #34495E;
-            text-align: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-        }
-
-        text {
-            color: #34495E;
-            font-size: medium;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-        }
-
-        select {
-            scroll-behavior: smooth;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: small;
-            color: #34495E;
-            font-style: oblique;
-            background-color: #FDFEFE;
-            border-style: double;
-            padding: 0 1em 0 0;
-            margin: 0;
-            width: 25%;
-            cursor: inherit;
-            line-height: inherit;
-        }
-
-        plot-legend {
-            font: 'Lato';
-            font-size: 14px;
-            font-weight: bold;
-        }
-    </style>
 </body>
 
 </html>
