--- a/Group6.html
+++ b/Group6.html
@@ -20,13 +20,9 @@
 
 <!-- Imports Dimple library -->
 <script charset="utf-8" src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.3.0/dimple.latest.min.js"></script>
-
 <link rel="stylesheet" type="text/css" href="fullpage.css" />
+
 <script type="text/javascript" src="fullpage.js"></script>
-
-
-
-
 
 <link rel="stylesheet" type="text/css" href="examples.css" />
 
@@ -41,9 +37,9 @@
         <li data-menuanchor="secondPage"><a href="#secondPage">Energy Cost</a></li>
         <li data-menuanchor="thirdPage"><a href="#thirdPage">Inflation</a></li>
         <li data-menuanchor="fourthPage"><a href="#fourthPage">Energy Mix</a></li>
-        <li data-menuanchor="fifthPage"><a href="#fifthPage">UK Import Dependency</a></li>
-        <li data-menuanchor="sixthPage"><a href="#sixthPage">International Import Dependency</a></li>
-        <li data-menuanchor="seventhPage"><a href="#seventhPage">UK Import Sources</a></li>
+        <li data-menuanchor="fifthPage"><a href="#fifthPage">Import Dependency</a></li>
+        <li data-menuanchor="sixthPage"><a href="#sixthPage">Import trends</a></li>
+        <li data-menuanchor="seventhPage"><a href="#seventhPage">Import sources</a></li>
         
     </ul>
 
@@ -145,15 +141,67 @@
         </div>
         <div class="section">
             <div id="energy_mix"></div>
+            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:150px;">
+                Historically, the UK was heavily reliant on fossil fuel energy. In 1965, the energy mix was heavily dominated by crude oil and coal consumption.
+                <br> <br>
+                The gradual phasing out of coal consumption has led to increasing reliance on natural gas. However, investment in renewable energy has helped diversify the energy mix in recent years.
+                <br> <br>
+                Although nuclear energy has had a consistent contribution to the energy mix, the rapid growth of wind consumption can be explained by the focus of renewable investment in wind infrastructure.
+                <br> <br>
+                Additionally, through observing the funnelling effect of the plot in more recent years, it’s evident that the overall energy consumption in the UK has slightly reduced since around the year of 2000.
+                <br> <br>
+                A combination of reducing energy consumption and investment in renewable energy technology, has allowed for the rapidly growing contributions by renewable energy. However, the current energy mix is still heavily dominated by oil and gas.
+            </text>
         </div>
         <div class="section">
             <div id="uk_import_dependency"></div>
+            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:150px;">
+                To understand how susceptible UK energy prices are affected by global events and policies, it’s worth discerning the quantity of the energy mix that is formed of imported energy. That is to say, how self-reliant is the UK when it comes to energy?
+                <br> <br>
+                Year on year variation of import contributions suggests that imports play an important part in dealing with sudden changes in demand.
+                <br> <br>
+                Taking a longer term view, import contributions fluctuate significantly decade to decade. High import reliance in the 1970s switched to the UK becoming a net exporter during the 1980s and 90s due to development in the North Sea.
+                <br> <br>
+                Imports reliance increased at the turn of the century, but through the growth in wind production has begun to decrease again.
+                <br> <br>
+                Over the last decade, on average 35% of annual energy consumption is formed of imported energy. With such a significant part of the energy mix formed of imports, the UK is affected by international politics, prices and shortages.
+            </text>
         </div>
         <div class="section">
             <div id="int_import_dependency"></div>
+            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:130px;">
+                How does the UK’s import dependency compare to other countries?
+                <br> <br>
+                Considering the last two decades, the UK’s import dependency presents significantly larger variation than the other case study countries. In particular, the UKs switch from a being net exporter to one of the largest energy importers is unique.
+                <br> <br>
+                As established earlier, energy consumption has fallen in recent years. In context, the UK’s increasing reliance on imports until 2013 is peculiar. It suggest that despite energy consumption falling, instead of reducing imports, the UK has reduced internal energy production.
+                <br> <br>
+                India and China demonstrate a progressively rising reliance on imported energy. This is likely due to their rapid economic development with demand outstripping the rate of development of internal energy production infrastructure.
+                <br> <br>
+                Germany has a uniquely high and consistent reliance on imports indicating the dependency the country has on international trends and events. The USA has slowly reduced its import reliance and only recently become a net exporter.
+                <br> <br>
+                The UK’s reliance on imported energy is comparatively high against other case study countries, but where does this imported energy come from?
+
+            </text>
         </div>
         <div class="section">
+            <input type="range" min="2001" max="2020" step="1" value="2020">   
             <div id="import-source"></div>
+            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:560px; top:510px;font-weight: bold;">
+                2001          
+            </text>
+            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:835px; top:510px;font-weight: bold;">
+                2020          
+            </text>
+            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:250px; right:250px; top:530px;">
+                What energy types is the UK importing, and where is it coming from?
+                <br> <br>
+                Since 2001, imported energy types have diversified largely through the growth of dominance of oil imports and phasing out of coal.
+                <br> <br>
+                The two main imported energy types of Oil and Gas are dominated by supplies from Norway, demonstrating a significant reliance. In 2001, Norway supplied around 75% of all oil and gas imports to the UK.
+                <br> <br>
+                The diversification of suppliers in recent years is largely due to the U.S.A. becoming a net exporter and supplying the UK with about 25% of oil consumption and 11% of gas consumption.
+            </text>
         </div>
     </div>
 
@@ -173,7 +221,7 @@
         };
         new fullpage('#fullpage', {
             //options here
-            sectionsColor: ['#F1948A', '#FDEDEC', '#FDEDEC', '#FDEDEC', '#FDEDEC', '#FDEDEC', '#FDEDEC'],
+            sectionsColor: ['#F1948A', '#FDEDEC', '#FDEDEC', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4'],
             anchors: ['firstPage', 'secondPage', 'thirdPage', 'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage'],
             autoScrolling: true,
             scrollHorizontally: true,
@@ -181,6 +229,7 @@
             lazyLoad: true
         });
     </script>
+    
 </body>
 
 </html>
