--- a/Group6.html
+++ b/Group6.html
@@ -141,7 +141,7 @@
         </div>
         <div class="section">
             <div id="energy_mix"></div>
-            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:150px;">
+            <text style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 998px; right:20px; top:150px;">
                 Historically, the UK was heavily reliant on fossil fuel energy. In 1965, the energy mix was heavily dominated by crude oil and coal consumption.
                 <br> <br>
                 The gradual phasing out of coal consumption has led to increasing reliance on natural gas. However, investment in renewable energy has helped diversify the energy mix in recent years.
@@ -155,7 +155,7 @@
         </div>
         <div class="section">
             <div id="uk_import_dependency"></div>
-            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:150px;">
+            <text style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:150px;">
                 To understand how susceptible UK energy prices are affected by global events and policies, it’s worth discerning the quantity of the energy mix that is formed of imported energy. That is to say, how self-reliant is the UK when it comes to energy?
                 <br> <br>
                 Year on year variation of import contributions suggests that imports play an important part in dealing with sudden changes in demand.
@@ -169,7 +169,7 @@
         </div>
         <div class="section">
             <div id="int_import_dependency"></div>
-            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:130px;">
+            <text style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:130px;">
                 How does the UK’s import dependency compare to other countries?
                 <br> <br>
                 Considering the last two decades, the UK’s import dependency presents significantly larger variation than the other case study countries. In particular, the UKs switch from a being net exporter to one of the largest energy importers is unique.
@@ -187,13 +187,13 @@
         <div class="section">
             <input type="range" min="2001" max="2020" step="1" value="2020">   
             <div id="import-source"></div>
-            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:560px; top:510px;font-weight: bold;">
+            <text style="text-align:left; font:'Lato'; font-size: 16px; position:absolute; left:560px; top:510px;font-weight: bold;">
                 2001          
             </text>
-            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:835px; top:510px;font-weight: bold;">
+            <text style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:835px; top:510px;font-weight: bold;">
                 2020          
             </text>
-            <text style="text-align:left, font: 'Lato';font-size: 16px; position:absolute; left:250px; right:250px; top:530px;">
+            <text style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:250px; right:250px; top:530px;">
                 What energy types is the UK importing, and where is it coming from?
                 <br> <br>
                 Since 2001, imported energy types have diversified largely through the growth of dominance of oil imports and phasing out of coal.
