--- a/Group6.html
+++ b/Group6.html
@@ -40,6 +40,8 @@
         <li data-menuanchor="fifthPage"><a href="#fifthPage">Import Dependency</a></li>
         <li data-menuanchor="sixthPage"><a href="#sixthPage">Import trends</a></li>
         <li data-menuanchor="seventhPage"><a href="#seventhPage">Import sources</a></li>
+        <li data-menuanchor="13thPage"><a href="#13thPage">Energy and Policy</a></li>
+        
         
     </ul>
 
