--- a/Group6.html
+++ b/Group6.html
@@ -468,7 +468,7 @@
             </div>
 
             <div class="section">
-                <iframe src="Elika_keypolicyswipper.html"></iframe>
+                <iframe src="Elika_keypolicyswipper.html" width="100%" height="85%" style="border:none;"></iframe>
             </div>
         
             <div class="section">
