--- a/Elika_keypolicyswipper.html
+++ b/Elika_keypolicyswipper.html
@@ -13,6 +13,251 @@
   <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script> 
  
   <link rel="stylesheet" type="text/css" href="examples.css" />
+
+  <style>
+
+ .header{
+	font-size:35px; 
+	text-align: center; 
+	padding-top: 200px;
+	padding-right: 200px; 
+	padding-left: 200px;
+	padding-bottom: 50px; 
+	}
+	.text {
+	margin: 100px; 
+	font-size: 20px;
+	position: relative;   
+	text-align: center; 
+	padding-right: 200px;
+	padding-left: 200px;
+	padding-bottom: 0px;
+	color: rgb(49, 48, 48); 
+	}    
+	.chart1{
+	margin: 100px;
+	position: relative; 
+	padding-top: 0px;
+	padding-right: 200px;
+	padding-left: 200px;
+	width: 800px;
+	height: 600px;
+	font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+	} 
+	.chart2{
+	margin: 100px;
+	position: relative; 
+	padding-top: 0px;
+	padding-right: 200px;
+	padding-left: 200px; 
+	width: 800px;
+	height: 600px;
+	font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+	} 
+	.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #fff;
+	flex-direction: column;
+	} 
+	.timeline {
+	width: 100%;
+	background-color: #fff; 
+	}
+	.timeline .swiper-container {
+	height: 100%;
+	width: 100%;
+	position: relative;
+	}
+	.timeline .swiper-wrapper {
+	transition: 2s cubic-bezier(0.68, -0.4, 0.27, 1.34) 0.2s;
+	}
+	.timeline .swiper-slide {
+	position: relative;
+	color: #fff;
+	overflow: hidden;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	}
+	.timeline .swiper-slide::after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	right: 100%;
+	bottom: 0%;
+	width: 100%;
+	height: 100%;
+	background-color: #34495E;  
+	}
+	.timeline .swiper-slide-content {
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	max-width: 500px;
+	right: 100%;
+	top: 100%; 
+	transform: translate(50%, 0);
+	font-size: 24px;
+	z-index: 2;
+	}
+	.timeline .swiper-slide .timeline-year {
+	display: block;
+	font-size: 30px; 
+	transform: translate3d(20px, 0, 0);
+	color: #34495E;
+	font-weight: 300;
+	padding-right: 50px;
+	opacity: 0;
+	transition: .2s ease .4s; 
+	}
+	.timeline .swiper-slide .timeline-title {
+	font-weight: 700;
+	font-size: 36px;
+	margin: 0 0 0px; 
+	opacity: 0; 
+	padding-right: 50px;
+	transform: translate3d(20px, 0, 0);
+	transition: .2s ease .5s;
+	}
+	.timeline .swiper-slide .timeline-text {
+	line-height: 1.5;
+	opacity: 0; 
+	transform: translate3d(20px, 0, 0);
+	transition: .2s ease .6s;
+	padding-right: 50px;
+    font-size: 18px;
+	}
+	.timeline .swiper-slide-active .timeline-year {
+	opacity: 1;
+	transform: translate3d(0, 0, 0);
+	transition: .4s ease 1.6s;
+	}
+	.timeline .swiper-slide-active .timeline-title {
+	opacity: 1;
+	transform: translate3d(0, 0, 0);
+	transition: .4s ease 1.7s;
+	}
+	.timeline .swiper-slide-active .timeline-text {
+	opacity: 1;
+	transform: translate3d(0, 0, 0);
+	transition: .4s ease 1.8s;
+	}
+	.timeline .swiper-pagination {
+	right: 15% !important; 
+	height: 100%;
+	display: none;
+	flex-direction: column;
+	justify-content: center;
+	color: #34495E;
+	font-weight: 300;
+	font-size: 25px;
+	z-index: 1;
+	}
+	.timeline .swiper-pagination::before {
+	content: "";
+	position: absolute;
+	left: -30px;
+	top: 0;
+	height: 100%;
+	width: 1px;
+	background-color: #34495E;
+	}
+	.timeline .swiper-pagination-bullet {
+	width: auto;
+	height: auto;
+	text-align: center;
+	opacity: 1;
+	background: transparent;
+	color: #34495E;
+	margin: 15px 0 !important;
+	position: relative;
+	}
+	.timeline .swiper-pagination-bullet::before {
+	content: "";
+	position: absolute;
+	top: 8px;
+	left: -35px;
+	width: 10px;
+	height: 10px;
+	border-radius: 100%;
+	background-color: #34495E;
+	transform: scale(0);
+	transition: .2s;
+	}
+	.timeline .swiper-pagination-bullet-active {
+	color: #34495E;
+	}
+	.timeline .swiper-pagination-bullet-active::before {
+	transform: scale(1);
+	}
+	.timeline .swiper-button-next,
+	.timeline .swiper-button-prev {
+	background-size: 20px 20px;
+	top: 15%;
+	width: 20px;
+	height: 20px;
+	margin-top: 0;
+	z-index: 2;
+	transition: .2s;
+	}
+	.timeline .swiper-button-prev {
+	left: 8%;
+	}
+	.timeline .swiper-button-prev:hover {
+	transform: translateX(-3px);
+	}
+	.timeline .swiper-button-next {
+	right: 8%;
+	}
+	.timeline .swiper-button-next:hover {
+	transform: translateX(3px);
+	}
+	.timeline .swiper-slide-content {
+	right: 30%;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 100%;
+	font-size: 16px;
+	text-align: right;
+	}
+	.timeline .swiper-slide .timeline-year {
+	margin-bottom: 0;
+	font-size: 16px;
+	}
+	.timeline .swiper-slide .timeline-title {
+	font-size: 20px;
+	margin: 0;
+	}
+	.timeline .swiper-pagination {
+	display: flex;
+	color:#34495E;
+	}
+	.timeline .swiper-button-prev {
+	top: 15%;
+	left: auto;
+	right: 18%;
+	transform: rotate(90deg) translate(0, 10px); 
+	color:black;
+	}
+	.timeline .swiper-button-prev:hover {
+	transform: rotate(90deg) translate(-3px, 10px); 
+	}
+	.timeline .swiper-button-next {
+	top: auto;
+	bottom: 15%;
+	right: 18%;
+	transform: rotate(90deg) translate(0, 10px);
+	color:black;
+	}
+	.timeline .swiper-button-next:hover {
+	transform: rotate(90deg) translate(3px, 10px); 
+	}
+	.timeline .swiper-slide-content {
+	right: 25%; 
+	}
+  </style>
 </head>
 <body>
   <div class="timeline">
