--- a/Group6.html
+++ b/Group6.html
@@ -461,9 +461,9 @@
 
             <div class="section">
                 <div class="header">
-                    <h3 style="font-size: 30px; padding-top: 0px;">Key Policies</h3>
-                    <p style="font-size: 24px">in specific conuntries</p>
-                    <p style="font-size: 16px">This policy overview captures a number of policies in the countries (Germany, China, India, UK and the US) as they push towards an equitable/ non-equitable energy outlook, 
+                    <h3 style="font-size: 30px; padding-top: 0px; line-height: 1.25em;">Key Policies</h3>
+                    <p style="font-size: 24px; line-height: 1.25em;">in specific countries</p>
+                    <p style="font-size: 16px; line-height: 1.25em;">This policy overview captures a number of policies in the countries (Germany, China, India, UK and the US) as they push towards an equitable/ non-equitable energy outlook, 
                       committing to important legislations that attempt to adjust the past narrative
                     </p>
                 </div>
@@ -476,8 +476,8 @@
             <div class="section">
         
                 <div class="header">
-                    <h3 style="font-size: 30px; padding-top: 150px;">End Note</h3> 
-                    <p style="font-size: 16px; padding-bottom: 250px;">Despite the perplexing investment trends and policy engagements- the investments voiced in early 2022
+                    <h3 style="font-size: 30px; padding-top: 150px; line-height: 1.25em;">End Note</h3> 
+                    <p style="font-size: 16px; padding-bottom: 250px; line-height: 1.25em;">Despite the perplexing investment trends and policy engagements- the investments voiced in early 2022
                       after the pandemic as well as during the Ukraine war pushes towards production and consumption through sustainable 'self-reliant' sources of energy which 
                       readjusts this situation for trends to emerge in the future.
                     </p>
