--- a/Group6.html
+++ b/Group6.html
@@ -264,19 +264,15 @@
         <!--Sunny from here-->
         <div class="section">
             <div id="viz_1" style="position:absolute; left:-450px; right:20px; top:130px;"></div>
+            <!--
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:130px;">
-                
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1200px; right:20px; top:130px;">     
                 sample text
-            </text>
+            </text> -->
         </div>
 
         <div class="section">
             <div id="viz_2" style="position:absolute; left:-450px; right:20px; top:130px;"></div>
-            <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:130px;">
-                sample text
-            </text>
         </div>
 
         <div class="section">
