--- a/Group6.html
+++ b/Group6.html
@@ -638,7 +638,7 @@
         };
         new fullpage('#fullpage', {
             //options here
-            sectionsColor: ['#F1948A', '#FDEDEC', '#FDEDEC', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', 'white', 'white', 'white', 'white', 'white', 'white'],
+            sectionsColor: ['#F1948A', '#FDEDEC', '#FDEDEC', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', 'white', 'white', 'white', 'white', 'white', 'white', ' ', 'white'],
             anchors: ['firstPage', 'secondPage', 'thirdPage', 'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage','eighthPage','ninthPage', '12thPage', '13thPage', '14thPage', '15thPage', '16thPage', '', '17thPage'],
             autoScrolling: true,
             scrollHorizontally: true,
