sunny edits buttons

--- a/Group6.html
+++ b/Group6.html
@@ -54,9 +54,11 @@
         <li data-menuanchor="seventhPage"><a href="#seventhPage">Import sources</a></li>
         <li data-menuanchor="eighthPage"><a href="#eighthPage">Energy per person world map</a></li>
         <li data-menuanchor="ninthPage"><a href="#ninthPage">Energy per person Folding Line Chart</a></li>
-        <li data-menuanchor="12thPage"><a href="#12thPage">Energy and Growth</a></li>
+        <li data-menuanchor="12thPage"><a href="#sunny1">Energy and Growth 1</a></li>
+        <li data-menuanchor="12thPage"><a href="#sunny2">Energy and Growth 2</a></li>
+        <li data-menuanchor="12thPage"><a href="#sunny3">Energy and Growth 3</a></li>
+        <li data-menuanchor="12thPage"><a href="#sunny4">Energy and Growth 4</a></li>
         <li data-menuanchor="13thPage"><a href="#13thPage">Energy and Policy</a></li>
-
         <li data-menuanchor="14thPage"><a href="#14thPage">Policy Investment</a></li>
         <li data-menuanchor="15thPage"><a href="#15thPage">Power Choice</a></li>
         <li data-menuanchor="16thPage"><a href="#16thPage">Key Policies</a></li>
@@ -708,7 +710,7 @@
                 '#FDEDEC', '#FDEDEC', //ankur // energy cost, inflation
                 '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', //val // mix, dependency, trends, sources
                 '#f4f4f4', '#f4f4f4', //bolin // map, folding line chart
-                'white', //sunny 
+                'white', 'white','white','white', //sunny 
                 'white', 'white', ' ', 'white' //elika // energy and policy, policy investment, choice, key policies, end note
             ],
             anchors: [
@@ -716,7 +718,7 @@
                 'secondPage', 'thirdPage', //ankur
                 'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage', //val
                 'eighthPage', 'ninthPage', //bolin
-                '12thPage', //sunny
+                'sunny1', 'sunny2', 'sunny3', 'sunny4', //sunny
                 '13thPage', '14thPage', '15thPage', '16thPage', '', '17thPage'], //elika
             autoScrolling: true,
             scrollHorizontally: true,
