--- a/Group6.html
+++ b/Group6.html
@@ -73,7 +73,7 @@
             <h1>Energy Use</h1>
         </div>
         <div class="section">
-            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 10px;">
+            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 60px;">
                 <div class="grid-item">
                     <text style="font: 'Lato';font-size: 14px;font-weight: bold;">
                         Cost of getting electricity (cumulative measure of total procedural, temporal, generation and
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 10px;">
+            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 60px;">
                 <div class="grid-item">
                     <text style="font: 'Lato';font-size: 14px;font-weight: bold;">
                         Inflation, consumer prices (annual %)
@@ -175,7 +175,7 @@
         <div class="section">
             <div id="energy_mix"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 998px; right:20px; top:150px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 1250px; right:90px; top:320px;">
                 Historically, the UK was heavily reliant on fossil fuel energy. In 1965, the energy mix was heavily
                 dominated by crude oil and coal consumption.
                 <br> <br>
@@ -196,7 +196,7 @@
         <div class="section">
             <div id="uk_import_dependency"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:150px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1250px; right:90px; top:320px;">
                 To understand how susceptible UK energy prices are affected by global events and policies, it’s worth
                 discerning the quantity of the energy mix that is formed of imported energy. That is to say, how
                 self-reliant is the UK when it comes to energy?
@@ -219,7 +219,7 @@
         <div class="section">
             <div id="int_import_dependency"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:998px; right:20px; top:130px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1250px; right:90px; top:320px;">
                 How does the UK’s import dependency compare to other countries?
                 <br> <br>
                 Considering the last two decades, the UK’s import dependency presents significantly larger variation
@@ -247,15 +247,15 @@
             <input type="range" min="2001" max="2020" step="1" value="2020">
             <div id="import-source"></div>
             <text
-                style="text-align:left; font:'Lato'; font-size: 16px; position:absolute; left:560px; top:510px;font-weight: bold;">
+                style="text-align:left; font:'Lato'; font-size: 16px; position:absolute; left:800px; top:650px;font-weight: bold;">
                 2001
             </text>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:835px; top:510px;font-weight: bold;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1090px; top:650px;font-weight: bold;">
                 2020
             </text>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:250px; right:250px; top:530px;">
+                style="text-align:middle; font: 'Lato';font-size: 16px; position:absolute; left:250px; right:250px; top:700px;">
                 What energy types is the UK importing, and where is it coming from?
                 <br> <br>
                 Since 2001, imported energy types have diversified largely through the growth of dominance of oil
@@ -273,7 +273,7 @@
         <div class="section">
             <div id="main3"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1360px; right:25px; top:190px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1250px; right:60px; top:240px;">
                 When we look at total energy consumption, differences across countries often reflect differences in
                 population size: countries with lots of people inevitably consume more energy than tiny countries.
                 <br> <br>
@@ -297,7 +297,7 @@
         <div class="section">
             <div id="main4"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 1320px; right:20px; top:130px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 1270px; right:40px; top:290px;">
                 Next we focus on four representative countries: the United States, India, the United Kingdom, and China.
                 <br> <br>
                 The U.S. average energy use per person remained steady overall during the 1990-2020 period, but there
@@ -327,9 +327,9 @@
         <!--Sunny from here   <div class="slide"> -->
         <div class="section">
 
-            <div id="viz_1" style="position:absolute; left:500px; right:20px; top:130px;"></div>
+            <div id="viz_1" style="position:absolute; left:900px; right:20px; top:130px;"></div> <!---->
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:60px; right:1000px; top:200px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:200px; right:1100px; top:200px; "> <!-- -->
                 Energy and Growth: New Trends
                 <br> <br>
                 Since the industrial revolution, energy availability has enabled economic growth. The norm was to
@@ -349,9 +349,9 @@
             </text>
         </div>
         <div class="section">
-            <div id="viz_2" style="position:absolute; left:500px; right:20px; top:130px;"></div>
+            <div id="viz_2" style="position:absolute; left:900px; right:20px; top:130px;"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:60px; right:1000px; top:200px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:200px; right:1100px; top:200px;">
                 Energy and Growth: Driving Factors
                 <br> <br>
                 Countries are replacing fossil fuels with low-carbon energy; as these renewable energy technologies
