--- a/Group6.html
+++ b/Group6.html
@@ -372,16 +372,17 @@
             <div id="slider"></div>
             <div id="viz_t"></div>
         </div>
+        <!--
         <div class="section">
-            <div id="viz_3" style="position:absolute; left:500px; right:20px; top:130px;"></div>
+            <div id="viz_sun3" style="position:absolute; left:500px; right:20px; top:130px;"></div>
             <text
                 style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:60px; right:1000px; top:200px;">
-                Energy and Growth: Driving Factors
+                Energy and Growth: Greenhouse Gas Emissions
                 <br> <br>
-
+                Energy and Growth: Greenhouse Gas Emissions
             </text>
         </div>
-
+        -->
         <!--Sunny to here-->
 
         <div class="section">
@@ -706,20 +707,10 @@
         new fullpage('#fullpage', {
             //options here
             sectionsColor: [
-                '#F1948A', //home
-                '#FDEDEC', '#FDEDEC', //ankur // energy cost, inflation
-                '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', //val // mix, dependency, trends, sources
-                '#f4f4f4', '#f4f4f4', //bolin // map, folding line chart
-                'white', 'white','white','white', //sunny 
-                'white', 'white', ' ', 'white' //elika // energy and policy, policy investment, choice, key policies, end note
+                '#F1948A', '#FDEDEC', '#FDEDEC', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', 'white', 'white','white','white', 'white', 'white', ' ', 'white'
             ],
             anchors: [
-                'firstPage', //home
-                'secondPage', 'thirdPage', //ankur
-                'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage', //val
-                'eighthPage', 'ninthPage', //bolin
-                'sunny1', 'sunny2', 'sunny3', 'sunny4', //sunny
-                '13thPage', '14thPage', '15thPage', '16thPage', '', '17thPage'], //elika
+                'firstPage', 'secondPage', 'thirdPage', 'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage', 'sunny1', 'sunny2', 'sunny3', 'sunny4', '13thPage', '14thPage', '15thPage', '16thPage', '', '17thPage'], 
             autoScrolling: true,
             scrollHorizontally: true,
             menu: '#menu',
@@ -729,27 +720,5 @@
 
 
 </body>
-
-<!--
-<li data-menuanchor="firstPage" class="active"><a href="#firstPage">Home</a></li>
-<li data-menuanchor="secondPage"><a href="#secondPage">Energy Cost</a></li>
-<li data-menuanchor="thirdPage"><a href="#thirdPage">Inflation</a></li>
-
-<li data-menuanchor="fourthPage"><a href="#fourthPage">Energy Mix</a></li>
-<li data-menuanchor="fifthPage"><a href="#fifthPage">Import Dependency</a></li>
-<li data-menuanchor="sixthPage"><a href="#sixthPage">Import trends</a></li>
-<li data-menuanchor="seventhPage"><a href="#seventhPage">Import sources</a></li>
-
-<li data-menuanchor="eighthPage"><a href="#eighthPage">Energy per person world map</a></li>
-<li data-menuanchor="ninthPage"><a href="#ninthPage">Energy per person Folding Line Chart</a></li>
-
-<li data-menuanchor="12thPage"><a href="#12thPage">Energy and Growth</a></li>
-
-<li data-menuanchor="13thPage"><a href="#13thPage">Energy and Policy</a></li>
-<li data-menuanchor="14thPage"><a href="#14thPage">Policy Investment</a></li>
-<li data-menuanchor="15thPage"><a href="#15thPage">Power Choice</a></li>
-<li data-menuanchor="16thPage"><a href="#16thPage">Key Policies</a></li>
-<li data-menuanchor="17thPage"><a href="#17thPage">End Note</a></li>
--->
 
 </html>
