--- a/Group6.html
+++ b/Group6.html
@@ -54,10 +54,9 @@
         <li data-menuanchor="seventhPage"><a href="#seventhPage">Import sources</a></li>
         <li data-menuanchor="eighthPage"><a href="#eighthPage">Energy per person world map</a></li>
         <li data-menuanchor="ninthPage"><a href="#ninthPage">Energy per person Folding Line Chart</a></li>
-        <li data-menuanchor="12thPage"><a href="#sunny1">Energy and Growth 1</a></li>
-        <li data-menuanchor="12thPage"><a href="#sunny2">Energy and Growth 2</a></li>
-        <li data-menuanchor="12thPage"><a href="#sunny3">Energy and Growth 3</a></li>
-        <li data-menuanchor="12thPage"><a href="#sunny4">Energy and Growth 4</a></li>
+        <li data-menuanchor="12thPage"><a href="#sunny1">Decoupling</a></li>
+        <li data-menuanchor="12thPage"><a href="#sunny2">Renewables</a></li>
+        <li data-menuanchor="12thPage"><a href="#sunny3">Comparison</a></li>
         <li data-menuanchor="13thPage"><a href="#13thPage">Energy and Policy</a></li>
         <li data-menuanchor="14thPage"><a href="#14thPage">Policy Investment</a></li>
         <li data-menuanchor="15thPage"><a href="#15thPage">Power Choice</a></li>
@@ -372,18 +371,7 @@
             <div id="slider"></div>
             <div id="viz_t"></div>
         </div>
-        <!--
-        <div class="section">
-            <div id="viz_sun3" style="position:absolute; left:500px; right:20px; top:130px;"></div>
-            <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:60px; right:1000px; top:200px;">
-                Energy and Growth: Greenhouse Gas Emissions
-                <br> <br>
-                Energy and Growth: Greenhouse Gas Emissions
-            </text>
-        </div>
-        -->
-        <!--Sunny to here-->
+        <!-- Sunny to here-->
 
         <div class="section">
             <div class="header">
@@ -707,10 +695,10 @@
         new fullpage('#fullpage', {
             //options here
             sectionsColor: [
-                '#F1948A', '#FDEDEC', '#FDEDEC', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', 'white', 'white','white','white', 'white', 'white', ' ', 'white'
+                '#F1948A', '#FDEDEC', '#FDEDEC', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', 'white', 'white','white','white', 'white', ' ', 'white'
             ],
             anchors: [
-                'firstPage', 'secondPage', 'thirdPage', 'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage', 'sunny1', 'sunny2', 'sunny3', 'sunny4', '13thPage', '14thPage', '15thPage', '16thPage', '', '17thPage'], 
+                'firstPage', 'secondPage', 'thirdPage', 'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage', 'sunny1', 'sunny2', 'sunny3', '13thPage', '14thPage', '15thPage', '16thPage', '', '17thPage'], 
             autoScrolling: true,
             scrollHorizontally: true,
             menu: '#menu',
