--- a/Group6.html
+++ b/Group6.html
@@ -18,10 +18,18 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
-<!-- Imports slider library -->
+<!--Policy slider library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800'>
+
+<!-- Policytimeline library -->
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Imports Apache library -->
 <script src="echarts.js"></script>
@@ -373,6 +381,7 @@
         </div>
         <!-- Sunny to here-->
 
+        <!-- Elika from here-->
         <div class="section">
             <div class="header">
                 <h1 style="font-size: 60px;">Energy and Policy</h1>
@@ -390,6 +399,10 @@
                     to new policy.</p>
             </div>
         </div>
+        <div class="section">
+            <iframe src="Elika_olicytimeline.html" width="100%" height="85%" style="border:none;"></iframe>
+        </div>
+        <div class="section">
         <div class="section">
 
             <div class="text">
@@ -660,6 +673,8 @@
             </div>
 
         </div>
+
+        <!-- Elika to here-->
 
 
 
