--- a/Group6.html
+++ b/Group6.html
@@ -402,19 +402,16 @@
                     across the world</p>
                 <p style="font-size: 18px;">The information is sourced from <a
                         href="https://www.energypolicytracker.org">The Energy Policy Tracker</a> that compiles
-                    publicly
-                    available information on public money commitments for diverse energy types as well as other
-                    policies
-                    that support energy production and consumption.
+                    publicly available information on public money commitments for diverse energy types as well as other
+                    policies that support energy production and consumption.
                 </p>
                 <p style="font-size: 14px;padding-bottom: 130px;">To note: the tracker only displays initial
-                    investment
-                    to new policy.</p>
+                    investment to new policy.</p>
             </div>
         </div>
 
         <div class="section">
-            <iframe src="Elika_olicytimeline.html" width="100%" height="85%" style="border:none;"></iframe>
+            <iframe src="Elika_policytimeline.html" width="100%" height="85%" style="border:none;"></iframe>
         </div>
 
         <div class="section">
@@ -598,11 +595,8 @@
                 <h3 style="font-size: 28px; line-height: 1.5em;"><b>Policy Investment by Energy Type</b></h3>
                 <p style="font-size: 18px; line-height: 2em;">in Billion USD</p>
                 <p style="font-size: 14px; line-height: 1.25em;">Despite various investments towards sustainable
-                    forms
-                    of energy- coal, oil and gas also had major policy investment in 2020.
-                    Investment in 2021 is towards hydro (water) as a power source, where other energy production
-                    investments have been decreased.
-                    These investments contradict the sustainble rhetoric.
+                    forms of energy- coal, oil and gas also had major policy investment in 2020. Investment in 2021 is towards hydro 
+                    (water) as a power source, where other energy production investments have been decreased. These investments contradict the sustainble rhetoric.
                 </p>
             </div>
 
